// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`dependencies non-server combos no options should export the correct data 1`] = `
Object {
  "devDependencies": Object {
    "@babel/core": "^7",
    "@babel/plugin-proposal-class-properties": "^7",
    "@babel/plugin-proposal-nullish-coalescing-operator": "^7",
    "@babel/plugin-proposal-object-rest-spread": "^7",
    "@babel/plugin-proposal-optional-chaining": "^7",
    "@babel/plugin-syntax-dynamic-import": "^7",
    "@babel/preset-env": "^7",
    "@babel/preset-react": "^7",
    "@fullhuman/postcss-purgecss": "^4",
    "@pmmmwh/react-refresh-webpack-plugin": "^0",
    "autoprefixer": "^10",
    "babel-loader": "^8",
    "chalk": "^4",
    "clean-webpack-plugin": "^3",
    "core-js": "^3",
    "cross-env": "^7",
    "css-declaration-sorter": "^6",
    "css-loader": "^5",
    "cssnano": "^4",
    "dotenv": "^8",
    "file-loader": "^6",
    "html-webpack-plugin": "^5",
    "mini-css-extract-plugin": "^1",
    "npm-run-all": "^4",
    "postcss": "^8",
    "postcss-combine-duplicated-selectors": "^10",
    "postcss-combine-media-query": "^1",
    "postcss-loader": "^5",
    "purgecss-whitelister": "latest",
    "react": "^17",
    "react-dom": "^17",
    "regenerator-runtime": "^0",
    "sass": "^1",
    "sass-loader": "^11",
    "sassyons": "latest",
    "style-loader": "^2",
    "terser-webpack-plugin": "^5",
    "webpack": "^5",
    "webpack-cli": "^4",
    "webpack-dev-server": "^3",
  },
  "serverDependencies": Object {},
}
`;

exports[`dependencies non-server combos redux & router should export the correct data 1`] = `
Object {
  "devDependencies": Object {
    "@babel/core": "^7",
    "@babel/plugin-proposal-class-properties": "^7",
    "@babel/plugin-proposal-nullish-coalescing-operator": "^7",
    "@babel/plugin-proposal-object-rest-spread": "^7",
    "@babel/plugin-proposal-optional-chaining": "^7",
    "@babel/plugin-syntax-dynamic-import": "^7",
    "@babel/preset-env": "^7",
    "@babel/preset-react": "^7",
    "@fullhuman/postcss-purgecss": "^4",
    "@pmmmwh/react-refresh-webpack-plugin": "^0",
    "autoprefixer": "^10",
    "babel-loader": "^8",
    "chalk": "^4",
    "clean-webpack-plugin": "^3",
    "core-js": "^3",
    "cross-env": "^7",
    "css-declaration-sorter": "^6",
    "css-loader": "^5",
    "cssnano": "^4",
    "dotenv": "^8",
    "file-loader": "^6",
    "history": "^5",
    "html-webpack-plugin": "^5",
    "mini-css-extract-plugin": "^1",
    "npm-run-all": "^4",
    "postcss": "^8",
    "postcss-combine-duplicated-selectors": "^10",
    "postcss-combine-media-query": "^1",
    "postcss-loader": "^5",
    "purgecss-whitelister": "latest",
    "react": "^17",
    "react-dom": "^17",
    "react-router-dom": "^5",
    "regenerator-runtime": "^0",
    "sass": "^1",
    "sass-loader": "^11",
    "sassyons": "latest",
    "style-loader": "^2",
    "terser-webpack-plugin": "^5",
    "webpack": "^5",
    "webpack-cli": "^4",
    "webpack-dev-server": "^3",
  },
  "serverDependencies": Object {},
}
`;

exports[`dependencies non-server combos redux should export the correct data 1`] = `
Object {
  "devDependencies": Object {
    "@babel/core": "^7",
    "@babel/plugin-proposal-class-properties": "^7",
    "@babel/plugin-proposal-nullish-coalescing-operator": "^7",
    "@babel/plugin-proposal-object-rest-spread": "^7",
    "@babel/plugin-proposal-optional-chaining": "^7",
    "@babel/plugin-syntax-dynamic-import": "^7",
    "@babel/preset-env": "^7",
    "@babel/preset-react": "^7",
    "@fullhuman/postcss-purgecss": "^4",
    "@pmmmwh/react-refresh-webpack-plugin": "^0",
    "autoprefixer": "^10",
    "babel-loader": "^8",
    "chalk": "^4",
    "clean-webpack-plugin": "^3",
    "core-js": "^3",
    "cross-env": "^7",
    "css-declaration-sorter": "^6",
    "css-loader": "^5",
    "cssnano": "^4",
    "dotenv": "^8",
    "file-loader": "^6",
    "html-webpack-plugin": "^5",
    "mini-css-extract-plugin": "^1",
    "npm-run-all": "^4",
    "postcss": "^8",
    "postcss-combine-duplicated-selectors": "^10",
    "postcss-combine-media-query": "^1",
    "postcss-loader": "^5",
    "purgecss-whitelister": "latest",
    "react": "^17",
    "react-dom": "^17",
    "regenerator-runtime": "^0",
    "sass": "^1",
    "sass-loader": "^11",
    "sassyons": "latest",
    "style-loader": "^2",
    "terser-webpack-plugin": "^5",
    "webpack": "^5",
    "webpack-cli": "^4",
    "webpack-dev-server": "^3",
  },
  "serverDependencies": Object {},
}
`;

exports[`dependencies non-server combos router should export the correct data 1`] = `
Object {
  "devDependencies": Object {
    "@babel/core": "^7",
    "@babel/plugin-proposal-class-properties": "^7",
    "@babel/plugin-proposal-nullish-coalescing-operator": "^7",
    "@babel/plugin-proposal-object-rest-spread": "^7",
    "@babel/plugin-proposal-optional-chaining": "^7",
    "@babel/plugin-syntax-dynamic-import": "^7",
    "@babel/preset-env": "^7",
    "@babel/preset-react": "^7",
    "@fullhuman/postcss-purgecss": "^4",
    "@pmmmwh/react-refresh-webpack-plugin": "^0",
    "autoprefixer": "^10",
    "babel-loader": "^8",
    "chalk": "^4",
    "clean-webpack-plugin": "^3",
    "core-js": "^3",
    "cross-env": "^7",
    "css-declaration-sorter": "^6",
    "css-loader": "^5",
    "cssnano": "^4",
    "dotenv": "^8",
    "file-loader": "^6",
    "history": "^5",
    "html-webpack-plugin": "^5",
    "mini-css-extract-plugin": "^1",
    "npm-run-all": "^4",
    "postcss": "^8",
    "postcss-combine-duplicated-selectors": "^10",
    "postcss-combine-media-query": "^1",
    "postcss-loader": "^5",
    "purgecss-whitelister": "latest",
    "react": "^17",
    "react-dom": "^17",
    "react-router-dom": "^5",
    "regenerator-runtime": "^0",
    "sass": "^1",
    "sass-loader": "^11",
    "sassyons": "latest",
    "style-loader": "^2",
    "terser-webpack-plugin": "^5",
    "webpack": "^5",
    "webpack-cli": "^4",
    "webpack-dev-server": "^3",
  },
  "serverDependencies": Object {},
}
`;

exports[`dependencies server combos mongo-options mongo should export the correct data 1`] = `
Object {
  "devDependencies": Object {
    "@babel/core": "^7",
    "@babel/plugin-proposal-class-properties": "^7",
    "@babel/plugin-proposal-nullish-coalescing-operator": "^7",
    "@babel/plugin-proposal-object-rest-spread": "^7",
    "@babel/plugin-proposal-optional-chaining": "^7",
    "@babel/plugin-syntax-dynamic-import": "^7",
    "@babel/preset-env": "^7",
    "@babel/preset-react": "^7",
    "@fullhuman/postcss-purgecss": "^4",
    "@pmmmwh/react-refresh-webpack-plugin": "^0",
    "autoprefixer": "^10",
    "babel-loader": "^8",
    "clean-webpack-plugin": "^3",
    "core-js": "^3",
    "cross-env": "^7",
    "css-declaration-sorter": "^6",
    "css-loader": "^5",
    "cssnano": "^4",
    "file-loader": "^6",
    "html-webpack-plugin": "^5",
    "mini-css-extract-plugin": "^1",
    "npm-run-all": "^4",
    "postcss": "^8",
    "postcss-combine-duplicated-selectors": "^10",
    "postcss-combine-media-query": "^1",
    "postcss-loader": "^5",
    "purgecss-whitelister": "latest",
    "react": "^17",
    "react-dom": "^17",
    "regenerator-runtime": "^0",
    "sass": "^1",
    "sass-loader": "^11",
    "sassyons": "latest",
    "style-loader": "^2",
    "terser-webpack-plugin": "^5",
    "webpack": "^5",
    "webpack-cli": "^4",
    "webpack-dev-server": "^3",
  },
  "serverDependencies": Object {
    "body-parser": "^1",
    "chalk": "^4",
    "compression": "^1",
    "connect-mongo": "^4",
    "dotenv": "^8",
    "express": "^4",
    "express-session": "^1",
    "helmet": "^4",
    "mongodb": "^3",
    "nodemon": "^2",
    "saslprep": "^1",
  },
}
`;

exports[`dependencies server combos mongo-options mongoRedux should export the correct data 1`] = `
Object {
  "devDependencies": Object {
    "@babel/core": "^7",
    "@babel/plugin-proposal-class-properties": "^7",
    "@babel/plugin-proposal-nullish-coalescing-operator": "^7",
    "@babel/plugin-proposal-object-rest-spread": "^7",
    "@babel/plugin-proposal-optional-chaining": "^7",
    "@babel/plugin-syntax-dynamic-import": "^7",
    "@babel/preset-env": "^7",
    "@babel/preset-react": "^7",
    "@fullhuman/postcss-purgecss": "^4",
    "@pmmmwh/react-refresh-webpack-plugin": "^0",
    "autoprefixer": "^10",
    "babel-loader": "^8",
    "clean-webpack-plugin": "^3",
    "core-js": "^3",
    "cross-env": "^7",
    "css-declaration-sorter": "^6",
    "css-loader": "^5",
    "cssnano": "^4",
    "file-loader": "^6",
    "html-webpack-plugin": "^5",
    "mini-css-extract-plugin": "^1",
    "npm-run-all": "^4",
    "postcss": "^8",
    "postcss-combine-duplicated-selectors": "^10",
    "postcss-combine-media-query": "^1",
    "postcss-loader": "^5",
    "purgecss-whitelister": "latest",
    "react": "^17",
    "react-dom": "^17",
    "regenerator-runtime": "^0",
    "sass": "^1",
    "sass-loader": "^11",
    "sassyons": "latest",
    "style-loader": "^2",
    "terser-webpack-plugin": "^5",
    "webpack": "^5",
    "webpack-cli": "^4",
    "webpack-dev-server": "^3",
  },
  "serverDependencies": Object {
    "body-parser": "^1",
    "chalk": "^4",
    "compression": "^1",
    "connect-mongo": "^4",
    "dotenv": "^8",
    "express": "^4",
    "express-session": "^1",
    "helmet": "^4",
    "mongodb": "^3",
    "nodemon": "^2",
    "saslprep": "^1",
  },
}
`;

exports[`dependencies server combos mongo-options mongoReduxRouter should export the correct data 1`] = `
Object {
  "devDependencies": Object {
    "@babel/core": "^7",
    "@babel/plugin-proposal-class-properties": "^7",
    "@babel/plugin-proposal-nullish-coalescing-operator": "^7",
    "@babel/plugin-proposal-object-rest-spread": "^7",
    "@babel/plugin-proposal-optional-chaining": "^7",
    "@babel/plugin-syntax-dynamic-import": "^7",
    "@babel/preset-env": "^7",
    "@babel/preset-react": "^7",
    "@fullhuman/postcss-purgecss": "^4",
    "@pmmmwh/react-refresh-webpack-plugin": "^0",
    "autoprefixer": "^10",
    "babel-loader": "^8",
    "clean-webpack-plugin": "^3",
    "core-js": "^3",
    "cross-env": "^7",
    "css-declaration-sorter": "^6",
    "css-loader": "^5",
    "cssnano": "^4",
    "file-loader": "^6",
    "history": "^5",
    "html-webpack-plugin": "^5",
    "mini-css-extract-plugin": "^1",
    "npm-run-all": "^4",
    "postcss": "^8",
    "postcss-combine-duplicated-selectors": "^10",
    "postcss-combine-media-query": "^1",
    "postcss-loader": "^5",
    "purgecss-whitelister": "latest",
    "react": "^17",
    "react-dom": "^17",
    "react-router-dom": "^5",
    "regenerator-runtime": "^0",
    "sass": "^1",
    "sass-loader": "^11",
    "sassyons": "latest",
    "style-loader": "^2",
    "terser-webpack-plugin": "^5",
    "webpack": "^5",
    "webpack-cli": "^4",
    "webpack-dev-server": "^3",
  },
  "serverDependencies": Object {
    "body-parser": "^1",
    "chalk": "^4",
    "compression": "^1",
    "connect-mongo": "^4",
    "dotenv": "^8",
    "express": "^4",
    "express-session": "^1",
    "helmet": "^4",
    "mongodb": "^3",
    "nodemon": "^2",
    "saslprep": "^1",
  },
}
`;

exports[`dependencies server combos mongo-options mongoRouter should export the correct data 1`] = `
Object {
  "devDependencies": Object {
    "@babel/core": "^7",
    "@babel/plugin-proposal-class-properties": "^7",
    "@babel/plugin-proposal-nullish-coalescing-operator": "^7",
    "@babel/plugin-proposal-object-rest-spread": "^7",
    "@babel/plugin-proposal-optional-chaining": "^7",
    "@babel/plugin-syntax-dynamic-import": "^7",
    "@babel/preset-env": "^7",
    "@babel/preset-react": "^7",
    "@fullhuman/postcss-purgecss": "^4",
    "@pmmmwh/react-refresh-webpack-plugin": "^0",
    "autoprefixer": "^10",
    "babel-loader": "^8",
    "clean-webpack-plugin": "^3",
    "core-js": "^3",
    "cross-env": "^7",
    "css-declaration-sorter": "^6",
    "css-loader": "^5",
    "cssnano": "^4",
    "file-loader": "^6",
    "history": "^5",
    "html-webpack-plugin": "^5",
    "mini-css-extract-plugin": "^1",
    "npm-run-all": "^4",
    "postcss": "^8",
    "postcss-combine-duplicated-selectors": "^10",
    "postcss-combine-media-query": "^1",
    "postcss-loader": "^5",
    "purgecss-whitelister": "latest",
    "react": "^17",
    "react-dom": "^17",
    "react-router-dom": "^5",
    "regenerator-runtime": "^0",
    "sass": "^1",
    "sass-loader": "^11",
    "sassyons": "latest",
    "style-loader": "^2",
    "terser-webpack-plugin": "^5",
    "webpack": "^5",
    "webpack-cli": "^4",
    "webpack-dev-server": "^3",
  },
  "serverDependencies": Object {
    "body-parser": "^1",
    "chalk": "^4",
    "compression": "^1",
    "connect-mongo": "^4",
    "dotenv": "^8",
    "express": "^4",
    "express-session": "^1",
    "helmet": "^4",
    "mongodb": "^3",
    "nodemon": "^2",
    "saslprep": "^1",
  },
}
`;

exports[`dependencies server combos non-mongo options server should export the correct data 1`] = `
Object {
  "devDependencies": Object {
    "@babel/core": "^7",
    "@babel/plugin-proposal-class-properties": "^7",
    "@babel/plugin-proposal-nullish-coalescing-operator": "^7",
    "@babel/plugin-proposal-object-rest-spread": "^7",
    "@babel/plugin-proposal-optional-chaining": "^7",
    "@babel/plugin-syntax-dynamic-import": "^7",
    "@babel/preset-env": "^7",
    "@babel/preset-react": "^7",
    "@fullhuman/postcss-purgecss": "^4",
    "@pmmmwh/react-refresh-webpack-plugin": "^0",
    "autoprefixer": "^10",
    "babel-loader": "^8",
    "clean-webpack-plugin": "^3",
    "core-js": "^3",
    "cross-env": "^7",
    "css-declaration-sorter": "^6",
    "css-loader": "^5",
    "cssnano": "^4",
    "file-loader": "^6",
    "html-webpack-plugin": "^5",
    "mini-css-extract-plugin": "^1",
    "npm-run-all": "^4",
    "postcss": "^8",
    "postcss-combine-duplicated-selectors": "^10",
    "postcss-combine-media-query": "^1",
    "postcss-loader": "^5",
    "purgecss-whitelister": "latest",
    "react": "^17",
    "react-dom": "^17",
    "regenerator-runtime": "^0",
    "sass": "^1",
    "sass-loader": "^11",
    "sassyons": "latest",
    "style-loader": "^2",
    "terser-webpack-plugin": "^5",
    "webpack": "^5",
    "webpack-cli": "^4",
    "webpack-dev-server": "^3",
  },
  "serverDependencies": Object {
    "body-parser": "^1",
    "chalk": "^4",
    "compression": "^1",
    "dotenv": "^8",
    "express": "^4",
    "helmet": "^4",
    "nodemon": "^2",
  },
}
`;

exports[`dependencies server combos non-mongo options serverRedux should export the correct data 1`] = `
Object {
  "devDependencies": Object {
    "@babel/core": "^7",
    "@babel/plugin-proposal-class-properties": "^7",
    "@babel/plugin-proposal-nullish-coalescing-operator": "^7",
    "@babel/plugin-proposal-object-rest-spread": "^7",
    "@babel/plugin-proposal-optional-chaining": "^7",
    "@babel/plugin-syntax-dynamic-import": "^7",
    "@babel/preset-env": "^7",
    "@babel/preset-react": "^7",
    "@fullhuman/postcss-purgecss": "^4",
    "@pmmmwh/react-refresh-webpack-plugin": "^0",
    "autoprefixer": "^10",
    "babel-loader": "^8",
    "clean-webpack-plugin": "^3",
    "core-js": "^3",
    "cross-env": "^7",
    "css-declaration-sorter": "^6",
    "css-loader": "^5",
    "cssnano": "^4",
    "file-loader": "^6",
    "html-webpack-plugin": "^5",
    "mini-css-extract-plugin": "^1",
    "npm-run-all": "^4",
    "postcss": "^8",
    "postcss-combine-duplicated-selectors": "^10",
    "postcss-combine-media-query": "^1",
    "postcss-loader": "^5",
    "purgecss-whitelister": "latest",
    "react": "^17",
    "react-dom": "^17",
    "regenerator-runtime": "^0",
    "sass": "^1",
    "sass-loader": "^11",
    "sassyons": "latest",
    "style-loader": "^2",
    "terser-webpack-plugin": "^5",
    "webpack": "^5",
    "webpack-cli": "^4",
    "webpack-dev-server": "^3",
  },
  "serverDependencies": Object {
    "body-parser": "^1",
    "chalk": "^4",
    "compression": "^1",
    "dotenv": "^8",
    "express": "^4",
    "helmet": "^4",
    "nodemon": "^2",
  },
}
`;

exports[`dependencies server combos non-mongo options serverReduxRouter should export the correct data 1`] = `
Object {
  "devDependencies": Object {
    "@babel/core": "^7",
    "@babel/plugin-proposal-class-properties": "^7",
    "@babel/plugin-proposal-nullish-coalescing-operator": "^7",
    "@babel/plugin-proposal-object-rest-spread": "^7",
    "@babel/plugin-proposal-optional-chaining": "^7",
    "@babel/plugin-syntax-dynamic-import": "^7",
    "@babel/preset-env": "^7",
    "@babel/preset-react": "^7",
    "@fullhuman/postcss-purgecss": "^4",
    "@pmmmwh/react-refresh-webpack-plugin": "^0",
    "autoprefixer": "^10",
    "babel-loader": "^8",
    "clean-webpack-plugin": "^3",
    "core-js": "^3",
    "cross-env": "^7",
    "css-declaration-sorter": "^6",
    "css-loader": "^5",
    "cssnano": "^4",
    "file-loader": "^6",
    "history": "^5",
    "html-webpack-plugin": "^5",
    "mini-css-extract-plugin": "^1",
    "npm-run-all": "^4",
    "postcss": "^8",
    "postcss-combine-duplicated-selectors": "^10",
    "postcss-combine-media-query": "^1",
    "postcss-loader": "^5",
    "purgecss-whitelister": "latest",
    "react": "^17",
    "react-dom": "^17",
    "react-router-dom": "^5",
    "regenerator-runtime": "^0",
    "sass": "^1",
    "sass-loader": "^11",
    "sassyons": "latest",
    "style-loader": "^2",
    "terser-webpack-plugin": "^5",
    "webpack": "^5",
    "webpack-cli": "^4",
    "webpack-dev-server": "^3",
  },
  "serverDependencies": Object {
    "body-parser": "^1",
    "chalk": "^4",
    "compression": "^1",
    "dotenv": "^8",
    "express": "^4",
    "helmet": "^4",
    "nodemon": "^2",
  },
}
`;

exports[`dependencies server combos non-mongo options serverRouter should export the correct data 1`] = `
Object {
  "devDependencies": Object {
    "@babel/core": "^7",
    "@babel/plugin-proposal-class-properties": "^7",
    "@babel/plugin-proposal-nullish-coalescing-operator": "^7",
    "@babel/plugin-proposal-object-rest-spread": "^7",
    "@babel/plugin-proposal-optional-chaining": "^7",
    "@babel/plugin-syntax-dynamic-import": "^7",
    "@babel/preset-env": "^7",
    "@babel/preset-react": "^7",
    "@fullhuman/postcss-purgecss": "^4",
    "@pmmmwh/react-refresh-webpack-plugin": "^0",
    "autoprefixer": "^10",
    "babel-loader": "^8",
    "clean-webpack-plugin": "^3",
    "core-js": "^3",
    "cross-env": "^7",
    "css-declaration-sorter": "^6",
    "css-loader": "^5",
    "cssnano": "^4",
    "file-loader": "^6",
    "history": "^5",
    "html-webpack-plugin": "^5",
    "mini-css-extract-plugin": "^1",
    "npm-run-all": "^4",
    "postcss": "^8",
    "postcss-combine-duplicated-selectors": "^10",
    "postcss-combine-media-query": "^1",
    "postcss-loader": "^5",
    "purgecss-whitelister": "latest",
    "react": "^17",
    "react-dom": "^17",
    "react-router-dom": "^5",
    "regenerator-runtime": "^0",
    "sass": "^1",
    "sass-loader": "^11",
    "sassyons": "latest",
    "style-loader": "^2",
    "terser-webpack-plugin": "^5",
    "webpack": "^5",
    "webpack-cli": "^4",
    "webpack-dev-server": "^3",
  },
  "serverDependencies": Object {
    "body-parser": "^1",
    "chalk": "^4",
    "compression": "^1",
    "dotenv": "^8",
    "express": "^4",
    "helmet": "^4",
    "nodemon": "^2",
  },
}
`;
